--- a/public/signin.html
+++ b/public/signin.html
@@ -8,40 +8,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+
     <link type="text/css" rel="stylesheet" href="materialize-css\dist\css\materialize.min.css" media="screen,projection" />
+    <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
 </head>
 
 <body>
-    <div class="containerr">
+    <div class="container">
         <div class="nav-container"></div>
-        <div class="row">
+        <div class="login-container">
             <div class=" accountimage">
                 <i class="material-icons large">account_circle</i>
             </div>
             <form action="" class="loginform col s12" id="loginform">
-                <div class="container" id="search">
-                    <div class="row">
-                    </div>
+                <div class="" id="search">
                     <div class="row">
                         <div class="input-field col s12">
                             <i class="material-icons  prefix">account_circle</i>
-                            <input type="text" class="fullName" id="fullName-input" name="uname" style="width: 40%;" required>
+                            <input type="text" class="fullName" id="fullName-input" name="uname" style="width: 100%;"; required>
                             <label for="fullName-input">Username</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
                             <i class="material-icons prefix">lock</i>
-                            <input  type="password" class="password" id="password-input" style="width: 40%;" required>
+                            <input  type="password" class="password" id="password-input" style="width: 100%;" required>
                             <label for="password">Password</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col s12">
-                            <button type="button" class="signin btn btn-secondary">Let's find the best roomate!</button>
+                            <button type="button" class="signin btn waves-effect waves-light btn-small">Let's find the best roomate!</button>
                         </div>
                     </div>
 
