--- a/public/signup2.html
+++ b/public/signup2.html
@@ -5,8 +5,9 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="materialize-css\dist\css\materialize.min.css" media="screen,projection" />
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="materialize-css\dist\css\materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
@@ -258,8 +259,8 @@
                                     </label>
                                 </p>
                                 <div class="input-field col s12">
-                                    <select class="chores" size="4" multiple>
-                                        <option value="" disabled selected>Choose your option</option>
+                                    <select multiple class="chores" >
+                                        <option value="" disabled >Choose your option</option>
                                         <option value="dishes">Washing dishes</option>
                                         <option value="cooking">Cooking</option>
                                         <option value="laundry">Laundry</option>
